# cs517-project

./: .gitignore  README.md  a.ipynb  abstain_eval.py  bootstrap_fairness.py  eval_baseline.py  eval_fairness.py  main.py  predict_and_save.py  prep_data.py  preprocess_hateexplain.py  pyproject.toml  threshold_opt.py  train_erm.py  train_reweighted_erm.py
src/calibration/: calibration.py
src/evaluation/: eval_fairness.py  eval_xplain.py  temp_scale_and_eval.py
src/inference/: predict_and_save.py  predict_explain.py  predict_groupdro.py
src/training/: train_groupdro.py
src/visualization/: make_figures.py
